<resources>
    <string name="app_name">সংখ্যা রুপান্তর</string>
    <string name="open">Open</string>
    <string name="close">Closed</string>
    <string name="decimalToBinary">দশমিক থেকে বাইনারি</string>
    <string name="binaryToDecimal">বাইনারি থেকে দশমিক</string>
    <string name="decimalToOctal">দশমিক থেকে অক্টাল</string>
    <string name="octalToDecimal">অক্টাল থেকে দশমিক</string>
    <string name="decimalToHexa">দশমিক থেকে হেক্সাডেসিমাল</string>
    <string name="hexaToDecimal">হেক্সাডেসিমাল থেকে দশমিক</string>
    <string name="binaryToOctal">বাইনারি থেকে অক্টাল</string>
    <string name="octalToBinary">অক্টাল থেকে বাইনারি</string>
    <string name="binaryToHexa">বাইনারি থেকে হেক্সাডেসিমাল</string>
    <string name="hexaToBinary">হেক্সাডেসিমাল থেকে বাইনারি</string>
    <string name="octalToHexa">অক্টাল থেকে হেক্সাডেসিমাল</string>
    <string name="hexaToOctal">হেক্সাডেসিমাল থেকে অক্টাল</string>
    <string name="inputDecimal">দশমিক সংখ্যা লিখুন</string>
    <string name="inputBinary">বাইনারি সংখ্যা লিখুন</string>
    <string name="inputOctal">অক্টাল সংখ্যা লিখুন</string>
    <string name="inputHexa">হেক্সাডেসিমাল সংখ্যা লিখুন</string>
    <string name="contactString">Contact</string>
    <string name="developer">Developed by @Md. Sirajul Islam Sojib</string>
    <string name="myname">Md. Sirajul Islam Sojib</string>
    <string name="university">International Islamic University Chittagong</string>
    <string name="devInfo">Developer Info</string>
    <string name="gmail">imsisojib@gmail.com</string>
    <string name="fblink">facebook.com/iMsiSojib</string>
    <string name="exit">Exit</string>
    <string name="welcome">স্বাগতম</string>
    <string name="rupantorkorarDirection">সংখ্যা রুপান্তর করার জন্য উপরের মেনু বাটনে ক্লিক করুন।</string>
    <string name="welcomeSpeech">এই এপটিতে মূলত আমরা সংখ্যা রুপান্তর পদ্ধতি সম্পর্কে জানবো ও ব্যবহার করবো। </string>
    <string name="porashonaStart">সংখ্যা পদ্ধতি সম্পর্কে জানতে</string>
    <string name="click"> ক্লিক </string>
    <string name="kourn">করুন!</string>
    <string name="tryAgain">পুনরায় করুন</string>
    <string name="convert">রুপান্তর করুন</string>
    <string name="result">ফলাফল</string>
    <string name="g2f">প্রথম পেইজ</string>
    <string name="page1SonkhaTotthoki">সংখ্যা পদ্ধতি কি?</string>
    <string name="page1Prokarved">সংখ্যার প্রকারভেদ</string>
    <string name="page1Bin">বাইনারী সংখ্যা</string>
    <string name="page1Octal">অক্টাল সংখ্যা</string>
    <string name="page1Decimal">দশমিক সংখ্যা</string>
    <string name="page1Hexa">হেক্সাডেসিমাল সংখ্যা</string>
    <string name="pageSubject">সূচিপত্র</string>
    <string name="working">কাজ চলিতেছে...</string>
    <string name="binaryHighlights">বাইনারী সংখ্যা পদ্ধতি:</string>
    <string name="binaryIntroduction">এই সংখ্যা পদ্ধতির ভিত্তি 2 অর্থাত এই পদ্ধতিতে 0 এবং 1 মোট 2টি সংখ্যা প্রতীক রয়েছে। ডিজিটাল ইলেকট্রনিক্সের হিসাব নিকাশের সময় কখনো কখনো দ্বিমিক সংখ্যার সাথে সাফিক্স হিসাবে এর ভিত্তি লিখে প্রকাশ করা হয়, এর মাধ্যমে বুঝা যায় সংখ্যাটি দ্বিমিক সংখ্যা।</string>
    <string name="binaryInroduction2"> যেমনঃ 101001(সাফিক্স)2 এখানে 101001 হলো ডেসিম্যাল সংখ্যা এবং 2 হলো এর ভিত্তি যার মাধ্যমে বুঝা যাচ্ছে সংখ্যাটি দ্বিমিক বা বাইনারী পদ্ধতির সংখ্যা।</string>
    <string name="binRupantorIntro">বাইনারী হতে অন্যান্য সংখ্যার রুপান্তর পদ্ধতি সমুহঃ</string>
    <string name="binToDecRupantor">বাইনারী হতে ডেসিম্যাল রূপান্তর</string>
    <string name="binToOctalRupantor">বাইনারী হতে অক্টাল রূপান্তর</string>
    <string name="binToHexaDecimalRupantor">বাইনারী হতে হেক্সাডেসিমাল রূপান্তর</string>
    <string name="bintoDecRupantorPageHeadline">বাইনারী হতে দশমিক রূপান্তরঃ</string>
    <string name="binToDecRupantorPageIntro">বাইনারী সংখ্যার প্রতিটি অংকের স্থানীয় মানসমূহ যোগ করে সমতূল্য ডেসিম্যাল সংখ্যা পাওয়া যায়।\nচিত্রের উদাহরণটি লক্ষ্যনীয়ঃ</string>
    <string name="binToDecRupantorPageLastPart">বাইনারী পূর্ণ ও ভগ্নাংশ সংখ্যার ক্ষেত্রে পূর্ণ অংশের সমতূল্য ডেসিম্যাল সংখ্যা দশমিক বিন্দুর বামে এবং ভগ্নাংশ দশমিক বিন্দুর ডানে স্থাপন করতে হয়। যেমনঃ 11101.101 এর দশমিক মান হবে 29.625 বা 11101.101(সাফিক্স 2) = 29.625(সাফিক্স 10)</string>
    <string name="bintohexarupantorpageHeadline">বাইনারী হতে হেক্সাডেসিমাল রূপান্তরঃ</string>
    <string name="binToHexaRupantorPageIntro">বাইনারী সংখ্যাটির ডান দিক হতে চারটি করে ডিজিট নিয়ে একটি করে গ্রুপ তৈরী করতে হবে। এভাবে প্রদত্ত সংখ্যাটি দ্বারা যতগুলি গ্রুপ তৈরী করা যায় ততগুলি গ্রুপ তৈরী করতে হবে। সর্ব বামের বা শেষ গ্রুপে চারটির কম বাইনারী ডিজিট হলে বাম পার্শ্বে প্রয়োজনীয় সংখ্যক শূণ্য 0 দ্বারা চার ডিজিট পূর্ণ করতে হবে।</string>
    <string name="bintToHexaRupantorLastPart">এবার প্রতিটি প্রুপের সমতূল্য হেক্সাডেসিম্যাল মান নিজ নিজ স্থানে বসালেই হেক্সাডেসিম্যাল মান পাওয়া যাবে। চিত্রের উদাহরণ লক্ষ্যনীয়ঃ সুতরাং 1111011(সাফিক্স)2 = 7B(সাফিক্স)16</string>
   <string name="binToOctRupantorHeadline">বাইনারী হতে অক্টাল রূপান্তরঃ</string>
    <string name="bintToOctRupantorPageIntro">বাইনারী সংখ্যাটির ডান দিক হতে শুরু করে বাম দিকে তিনটি করে ডিজিট নিয়ে একটি করে গ্রুপ তৈরী করতে হবে।\nসর্ব বামের গ্রুপে তিন ডিজিট পূর্ণ না হলে শূণ্য (0) দ্বারা পূর্ণ করতে হবে। এভাবে একটি বাইনারী সংখ্যাতে কয়েকটি গ্রুপ হতে পারে। এবার প্রত্যেকটি বাইনারী গ্রুপের সমতূল্য ডেসিম্যাল মান নিজ নিজ স্থানে বসিয়ে সমতূল্য অকট্যাল সংখ্যা পাওয়া যায়।\n\nচিত্রের উদাহরণটি লক্ষনীয়ঃ</string>
    <string name="binToOctRupantorPageLastPart">1111011 বাইনারী সংখ্যাটিকে ডান দিক হতে তিনটি করে ডিজিট নিয়ে একটি করে গ্রুপ তৈরী করা হয়েছে।\nসর্ব বামের গ্রুপে তিন ডিজিট পূর্ণ না হওয়ার কারনে দুটি শূণ্য (0) দ্বারা তিন ডিজিট পূর্ণ করা হয়েছে। এভাবে বাইনারী সংখ্যাটি হতে তিনটি গ্রুপ সৃষ্টি হয়েছে।\n\nএবার প্রত্যেকটি বাইনারী গ্রুপের সমতূল্য ডেসিম্যাল মান নিজ নিজ স্থানে বসিয়ে সমতূল্য অকট্যাল সংখ্যা 173 পাওয়া যায়।\n\nসুতরাং 1111011(সাফিক্স 2) = 173(সাফিক্স 8)</string>
    <string name="sonkhaPoddhotiHeadline">সংখ্যা পদ্ধতি কিঃ</string>
    <string name="sonkhaPoddhotiText">সংখ্যা পদ্ধতি হলো কোন সংখ্যাকে উপস্থাপন করার জন্য নির্দিষ্ট লিখিত রূপ বা পদ্ধতি যাতে কিছু সংখ্যক নির্দিষ্ট ‘সংখ্যা প্রতীক’ ব্যবহার করা হয়।
	 এবং এই সকল প্রতীকসমূহ হতে সুনির্দিষ্ট নিয়মে সজ্জিত একগুচ্ছ প্রতীক যা একটি নির্দিষ্ট সংখ্যা মান প্রকাশ করে।
 	সংখ্যা প্রকাশের এরূপ নিয়ম, পদ্ধতি বা রীতিকে সংখ্যা পদ্ধতি বলা হয়।
 	এক কথায়, কোন সংখ্যা প্রকাশের লিখিত পদ্ধতিকেই সংখ্যা পদ্ধতি বলা হয়ে থাকে।
 	এই সকল ‘সংখ্যা প্রতীকগুলোকে’ আমরা ‘ডিজিট’ বা বাংলা ভাষায় ‘অংক’ বলে জানি।</string>
    <string name="sonkhaPoddhotiText2">সংখ্যা প্রকাশ করার ক্ষুদ্রতম প্রতীক হচ্ছে অংক।
	যেমন 1, 2, 3 আলাদা তিনটি অংক, এই তিনটি অংককে একত্রে সাজিয়ে পাই 312 তিনশত বারো, যা একটি নির্দিষ্ট সংখ্যা।
 	আবার 1, 2 এবং 3 এদের প্রত্যেকের স্বতন্ত্র সাংখ্যিক মান আছে। এভাবে সংখ্যা পদ্ধতিতে বিভিন্ন অংককে নিয়ম মত সাজিয়ে বিভিন্ন সংখ্যা পাওয়া যায়।
 	এ সকল সংখ্যাসমূহকে যোগ, বিয়োগ, গুণ, ভাগ ইত্যাদি গাণিতিক প্রকৃয়ার মাধ্যমে প্রয়োজনীয় গণনার কার্য সমাধান করা যায়।</string>
    <string name="sonkhaPoddhotirVitti">সংখ্যা পদ্ধতির ভিত্তি </string>
    <string name="sonkhaPoddhotirVittiHeadline">সংখ্যা পদ্ধতির ভিত্তিঃ</string>
    <string name="BaseOfShonkhaPoddoti">কোন সংখ্যা পদ্ধতির ভিত্তি হচ্ছে ঐ সংখ্যা পদ্ধতিতে ব্যবহৃত অংকসমূহ বা প্রতীকসমূহের মোট সংখ্যা। যেমন ডেসিম্যাল বা দশমিক পদ্ধতির ভিত্তি হচ্ছে 10, কারণ দশমিক সংখ্যা পদ্ধতিতে মোট দশটি অংক বা প্রতীক (0, 1, 2, 3, 4, 5, 6, 7, 8, 9) রয়েছে।</string>
    <string name="BaseOfSonkhaPoddhoti2"> অনুরূপ বাইনারী সংখ্যা পদ্ধতির ভিত্তি 2, কারণ বাইনারী সংখ্যা পদ্ধতিতে মোট দুটি অংক বা প্রতীক (0, 1) রয়েছে। অকট্যাল সংখ্যা পদ্ধতির ভিত্তি 8, কারণ অকট্যাল সংখ্যা পদ্ধতিতে মোট আটটি অংক বা প্রতীক (0, 1, 2, 3, 4, 5, 6, 7) রয়েছে।
    হেক্সাডেসিম্যাল সংখ্যা পদ্ধতির ভিত্তি 16, কারণ হেক্সাডেসিম্যাল সংখ্যা পদ্ধতিতে মোট ষোলটি অংক বা প্রতীক (0, 1, 2, 3, 4, 5, 6, 7, 8, 9, A, B, C, D, E, F) রয়েছে। </string>
    <string name="sthanioman">সংখ্যার স্থানীয় মান</string>
    <string name="sthaniomanHeadline">সংখ্যার স্থানীয় মানঃ</string>
    <string name="sthaniomanText">যে কোন সংখ্যার অন্তর্গত ডিজিট বা অংকসমূহের অবস্থানগত মানকে স্থানীয় মান বলা হয়। ‘স্থানীয় মান’ সংখ্যা পদ্ধতির একটি বিশেষ রীতি/নিয়ম যার মাধ্যমে উচ্চতর সংখ্যাসমূহকে প্রকাশ করা যায়। ভিন্ন ভিন্ন সংখ্যা পদ্ধতির ক্ষেত্রে স্থানীয় মানের তারতম্য হয়।</string>
    <string name="sthaniomanText2">যেমন দশমিক সংখ্যা পদ্ধতিতে কোন সংখ্যার সর্ব ডানের অংকের মান নিজস্ব মানের একক বা এক গুণ, ডান দিক হতে দ্বিতীয় ঘরে অবস্থিত অংকের স্থানীয় মান নিজস্ব মানের দশ গুন, তৃতীয় ঘরে অবস্থিত অংকের স্থানীয় মান অংকটির নিজস্ব মানের একশত গুন, এভাবে প্রতিটি ঘরের স্থানীয় মান তার পূর্ববর্তী ঘরের স্থানীয় মানের দশগুন হারে বাড়তে থাকে, অর্থাত প্রকৃত কথা হলো অংক যত বামে যেতে থাকে তার স্থানীয় মান সংখ্যা পদ্ধতির ভিত্তি এর ঘাত অনুযায়ী বাড়তে থাকে। নিচের উদাহরণসমূহ লক্ষ্যনীয় –</string>
    <string name="sonkhaPoddhotirProkarvedHeadline">সংখ্যার প্রকারভেদঃ</string>
    <string name="sonkhaPoddhotirProkarvedText">ইতিহাসের পরিক্রমায় দেখা যায় বিভিন্ন যুগে পৃথিবীর বিভিন্ন স্থানে বিভিন্ন সংখ্যা পদ্ধতি ব্যবহার হয়েছে। সেই সকল সংখ্যা পদ্ধতির ভিত্তি আলাদা এবং অংক বা প্রতীকসমূহও আলাদা।</string>
    <string name="sonkhaPoddhotirProkarvedText2">কিন্তু ডিজিটাল ইলেকট্রনিক্সের হিসাব নিকাশ, বর্তনীর নকশা প্রনয়নের কাজে এবং ডিজিটাল কম্পিউটারে প্রকৃয়া করণের সুবিধার্থে যে সংখ্যা পদ্ধতিসমূহ বেশী ব্যবহৃত হয় তা আমাদের আলোচিত বিষয়। এ বিষয়টি বিবেচনা করলে চারটি পদ্ধতি বেশী আলোচিত তা হলোঃ</string>
    <string name="sonkhaPoddhotirProkarvedText3">1.বাইনারী সংখ্যা পদ্ধতি\n
    2.দশমিক/ডেসিম্যাল সংখ্যা পদ্ধতি\n
    3.অক্টাল সংখ্যা পদ্ধতি\n
    4.হেক্সাডেসিম্যাল সংখ্যা পদ্ধতি</string>
    <string name="OctalPageHeadline">অক্টাল সংখ্যা পদ্ধতিঃ</string>
    <string name="OctalInroText">এই সংখ্যা পদ্ধতির ভিত্তি 8 অর্থাত এই পদ্ধতিতে 0 হতে 7 পর্যন্ত মোট 8টি সংখ্যা প্রতীক রয়েছে।\n\nডিজিটাল ইলেকট্রনিক্সের হিসাব নিকাশের সময় কখনো কখনো অকট্যাল সংখ্যার সাথে সাফিক্স হিসাবে এর ভিত্তি লিখে প্রকাশ করা হয়, এর মাধ্যমে বুঝা যায় সংখ্যাটি অক্টাল সংখ্যা। যেমনঃ 756(সাফিক্স 8) এখানে 756 হলো অক্টাল সংখ্যা এবং 8 হলো এর ভিত্তি যার মাধ্যমে বুঝা যাচ্ছে সংখ্যাটি অক্টাল পদ্ধতির সংখ্যা।</string>
   <string name="OctalIntroText2">অক্টাল সংখ্যা হতে অন্যান্য সংখ্যার রূপান্তর পদ্ধতি সমুহঃ</string>
    <string name="octToBinaryBtn">অক্টাল হতে বাইনারী রূপান্তর</string>
    <string name="octToDecimalBtn">অক্টাল হতে দশমিক রূপান্তর</string>
    <string name="octToHexaBtn">অক্টাল হতে হেক্সাডেসিম্যাল রূপান্তর</string>
    <string name="decimalPageHeadline">দশমিক সংখ্যা পদ্ধতিঃ</string>
    <string name="decimalPageText">প্রাত্যহিক বাস্তব জীবনে হিসাব নিকাশ করার জন্য আমরা যে সংখ্যা পদ্ধতি ব্যবহার করি তা দশমিক সংখ্যা পদ্ধতি। এর ভিত্তি 10 অর্থাত এই পদ্ধতিতে 0 হতে 9 পর্যন্ত মোট 10টি সংখ্যা প্রতীক রয়েছে।</string>
    <string name="decimalPageText2">ডিজিটাল ইলেকট্রনিক্সের হিসাব নিকাশের সময় কখনো কখনো দশমিক সংখ্যার সাথে সাফিক্স হিসাবে এর ভিত্তি লিখে প্রকাশ করা হয়, এর মাধ্যমে বুঝা যায় সংখ্যাটি দশমিক সংখ্যা।\n যেমনঃ 9347(সাফিক্স)10 এখানে 9347 হলো ডেসিম্যাল সংখ্যা এবং 10 হলো এর ভিত্তি যার মাধ্যমে বুঝা যাচ্ছে সংখ্যাটি দশমিক পদ্ধতির সংখ্যা।</string>
    <string name="decimalPageText3">দশমিক সংখ্যা হতে অন্যান্য সংখ্যা পদ্ধতির রূপান্তর সমুহঃ </string>
    <string name="dectobinText">দশমিক থেকে বাইনারী রূপান্তর </string>
    <string name="decToOctText">দশমিক থেকে অক্টাল রূপান্তর</string>
    <string name="hexaIntroText">এই সংখ্যা পদ্ধতির ভিত্তি 16 অর্থাত এই পদ্ধতিতে 0 হতে 9 পর্যন্ত মোট 10টি সংখ্যা প্রতীক এবং সেই সাথে A, B, C, D, E, F এই 6টি বর্ণ প্রতীক রয়েছে।</string>
    <string name="hexaPageHeadline">হেক্সাডেসিম্যাল সংখ্যা পদ্ধতি:</string>
    <string name="hexaIntroText2">ডিজিটাল ইলেকট্রনিক্সের হিসাব নিকাশের সময় কখনো কখনো হেক্সাডেসিম্যাল সংখ্যার সাথে সাফিক্স হিসাবে এর ভিত্তি লিখে প্রকাশ করা হয়, এর মাধ্যমে বুঝা যায় সংখ্যাটি হেক্সাডেসিম্যাল সংখ্যা।\n\nযেমনঃ 5C7F(সাফিক্স 16) এখানে 5C7F হলো হেক্সাডেসিম্যাল সংখ্যা এবং 16 হলো এর ভিত্তি যার মাধ্যমে বুঝা যাচ্ছে সংখ্যাটি হেক্সাডেসিম্যাল পদ্ধতির সংখ্যা।</string>
    <string name="hexaInroText3">হেক্সাডেসিম্যাল সংখ্যা হতে অন্যান্য সংখ্যা পদ্ধতির রূপান্তর সমুহঃ</string>
    <string name="HexaToBinBtn">হেক্সাডেসিম্যাল হতে বাইনারী রূপান্তর</string>
    <string name="HexaToOctalBtn">হেক্সাডেসিম্যাল হতে অক্টাল রূপান্তর</string>
    <string name="HexaToDecimalBtn">হেক্সাডেসিম্যাল হতে ডেসিম্যাল রূপান্তর</string>
</resources>