<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <TextView
        android:layout_margin="10dp"
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="6dp"
        android:text="@string/binaryToHexa"
        android:textSize="24sp" />

    <EditText
        android:layout_margin="10dp"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="22sp"
        android:hint="@string/inputBinary"
        android:id="@+id/inputDecimal"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        >

        <Button
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/convert"
            android:id="@+id/convert"

            />
        <Button
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/tryAgain"
            android:id="@+id/tryAgain"

            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_margin="10dp"
            android:id="@+id/outputTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="30sp"
            android:hint="@string/result"
            />
    </LinearLayout>

</LinearLayout>