<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorGreen"
    tools:context="com.example.sojib.numberconversion2.HexaPage">

    <LinearLayout
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/backgroundColorWhite"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/hexaPageHeadline"
                android:textColor="@color/newTextColor"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textAlignment="textStart"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:background="@color/backgroundColorWhite"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hexaIntroText"
                android:padding="5dp"
                android:textColor="@color/newTextColor"
                android:textSize="20sp"
                android:textAlignment="textStart"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:background="@color/backgroundColorWhite"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hexaIntroText2"
                android:padding="5dp"
                android:textColor="@color/newTextColor"
                android:textSize="20sp"
                android:textAlignment="textStart"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@color/backgroundColorWhite"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hexaInroText3"
                android:padding="5dp"
                android:textColor="@color/newTextColor"
                android:textSize="20sp"
                android:textAlignment="textStart"
                />

            <LinearLayout
                android:orientation="vertical"
                android:padding="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/HexaToBinBtn"
                    android:textColor="@color/newTextColor"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:background="@color/buttonBackgroundBlue"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"

                    android:id="@+id/octbin"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/HexaToOctalBtn"
                    android:textColor="@color/newTextColor"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:background="@color/buttonBackgroundBlue"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"
                    android:id="@+id/octdec"

                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/HexaToDecimalBtn"
                    android:textColor="@color/newTextColor"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:background="@color/buttonBackgroundBlue"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"
                    android:id="@+id/octhexa"

                    />

            </LinearLayout>

        </LinearLayout>





    </LinearLayout>


</ScrollView>
